--- a/template/options.html
+++ b/template/options.html
@@ -13,5 +13,8 @@
     <div class="library_box">
       <h1>选项</h1>
     </div>
+    <div class="save_button">
+    <span>确定</span>
+    </div>
   </body>
 </html>
